try to fix ios styling that is not visible in dev tools

--- a/src/App.css
+++ b/src/App.css
@@ -307,10 +307,21 @@ a {
 }
 
 #keyboard .keyboardLetter {
+  all: unset;
+  text-decoration: none;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: rgb(239, 239, 239);
   font-size: 7vw;
   width: 8vw;
   text-align: center;
-  padding: 1px;
+  padding: 3px 0;
+  color: black;
+  font-family: sans-serif;
+  margin: 0;
+  border: none;
+  border-radius: 2px;
 }
 
 #keyboard .keyboardRow {
